small alignment fix (#149)

--- a/src/Tag/Tag.scss
+++ b/src/Tag/Tag.scss
@@ -19,6 +19,7 @@
   .tagRemoveButton {
     cursor: pointer;
     padding-left: 10px;
+    padding-bottom: 2px;
     cursor: pointer;
     color: $B10;
     font-size: 14px;
